--- a/sections/appconstraints.tex
+++ b/sections/appconstraints.tex
@@ -12,5 +12,5 @@
  \autoref{lem:hvcprobhom}&$\bagg \geq$&$ \eta\sqrt{2\alpha_w\rho(\epsilon + 1 + \log_2 n + \log_2(2\tau \lceil\log_{2\eta+1}q\rceil + \xi\lceil\log_{2\eta+1}q'\rceil))\cdot\ln2}$
 %\bottomrule
 \end{tabular}
-\caption{The constraints a set of Chipmunk parameters needs to satisfy.}
+\caption{The constraints a set of Chipmunk parameters needs to satisfy.}\label{tab:constraints}
 \end{table}
