--- a/extraref.bib
+++ b/extraref.bib
@@ -72,3 +72,38 @@
   booktitle = "6th ASIA Public-Key Cryptography Workshop",
   pages     = {3–11},
 }
+
+@inproceedings{DBLP:conf/uss/AlkimDPS16,
+  author       = {Erdem Alkim and
+                  L{\'{e}}o Ducas and
+                  Thomas P{\"{o}}ppelmann and
+                  Peter Schwabe},
+  editor       = {Thorsten Holz and
+                  Stefan Savage},
+  title        = {Post-quantum Key Exchange - {A} New Hope},
+  booktitle    = {25th {USENIX} Security Symposium, {USENIX} Security 16, Austin, TX,
+                  USA, August 10-12, 2016},
+  pages        = {327--343},
+  publisher    = {{USENIX} Association},
+  year         = {2016},
+  url          = {https://www.usenix.org/conference/usenixsecurity16/technical-sessions/presentation/alkim},
+  timestamp    = {Mon, 01 Feb 2021 08:43:18 +0100},
+  biburl       = {https://dblp.org/rec/conf/uss/AlkimDPS16.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/jmc/AlbrechtPS15,
+  author       = {Martin R. Albrecht and
+                  Rachel Player and
+                  Sam Scott},
+  title        = {On the concrete hardness of Learning with Errors},
+  journal      = {J. Math. Cryptol.},
+  volume       = {9},
+  number       = {3},
+  pages        = {169--203},
+  year         = {2015},
+  url          = {http://www.degruyter.com/view/j/jmc.2015.9.issue-3/jmc-2015-0016/jmc-2015-0016.xml},
+  timestamp    = {Thu, 13 Aug 2020 12:42:23 +0200},
+  biburl       = {https://dblp.org/rec/journals/jmc/AlbrechtPS15.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
