--- a/sections/benchmarks.tex
+++ b/sections/benchmarks.tex
@@ -1,5 +1,75 @@
 \section{Parameters and Implementations}
 \subsection{Parameters}
+
+% ┌──────────┬───────┬────────┬───────────┬───────────┬───────────┬─────────┬───────┬─────────┬──────────────┬──────────┬───────┬─────────────┬─────────┬─────────────┐
+% │   secpar │   tau │    rho │   epsilon │   alpha_w │   alpha_H │   delta │   phi │   gamma │   beta_sigma │   q_kots │   eta │   beta_open │   q_hvc │ size        │
+% ├──────────┼───────┼────────┼───────────┼───────────┼───────────┼─────────┼───────┼─────────┼──────────────┼──────────┼───────┼─────────────┼─────────┼─────────────┤
+% │      112 │    21 │   1024 │        15 │        16 │        37 │       1 │    13 │       6 │       775143 │  3168257 │    59 │       25133 │  202753 │ 141.8750 KB │
+% │      112 │    21 │   8192 │        15 │        16 │        37 │       1 │    16 │       6 │      2698381 │ 10872833 │    99 │      120108 │  962561 │ 159.3750 KB │
+% │      112 │    21 │ 131072 │        15 │        16 │        37 │       1 │    13 │       7 │      8803786 │ 35301377 │   199 │      970665 │ 7790593 │ 186.8125 KB │
+% │      112 │    24 │   1024 │        15 │        16 │        37 │       1 │    13 │       6 │       775143 │  3168257 │    59 │       25202 │  202753 │ 159.8750 KB │
+% │      112 │    24 │   8192 │        15 │        16 │        37 │       1 │    16 │       6 │      2698381 │ 10872833 │    99 │      120438 │  964609 │ 179.6250 KB │
+% │      112 │    24 │ 131072 │        15 │        16 │        37 │       1 │    13 │       7 │      8803786 │ 35301377 │   199 │      973331 │ 7790593 │ 210.4375 KB │
+% │      112 │    26 │   1024 │        15 │        16 │        37 │       1 │    13 │       6 │       775143 │  3168257 │    59 │       25243 │  202753 │ 171.8750 KB │
+% │      112 │    26 │   8192 │        15 │        16 │        37 │       1 │    16 │       6 │      2698381 │ 10872833 │   101 │      123098 │  995329 │ 193.1250 KB │
+% │      112 │    26 │ 131072 │        15 │        16 │        37 │       1 │    13 │       7 │      8803786 │ 35301377 │   199 │      974934 │ 7806977 │ 226.1875 KB │
+% │      128 │    21 │   1024 │        15 │        19 │        44 │       1 │     9 │       7 │       698123 │  2856961 │    63 │       29276 │  249857 │ 143.1875 KB │
+% │      128 │    21 │   8192 │        15 │        19 │        44 │       1 │     8 │       8 │      1761048 │  7114753 │    25 │       32252 │  270337 │ 189.0000 KB │
+% │      128 │    21 │ 131072 │        15 │        19 │        44 │       1 │     9 │       8 │      7924716 │ 31776769 │    35 │      182757 │ 1492993 │ 223.3750 KB │
+% │      128 │    24 │   1024 │        15 │        19 │        44 │       1 │     9 │       7 │       698123 │  2856961 │    63 │       29357 │  249857 │ 161.1875 KB │
+% │      128 │    24 │   8192 │        15 │        19 │        44 │       1 │     8 │       8 │      1761048 │  7114753 │    25 │       32339 │  270337 │ 213.0000 KB │
+% │      128 │    24 │ 131072 │        15 │        19 │        44 │       1 │     9 │       8 │      7924716 │ 31776769 │    35 │      183255 │ 1492993 │ 251.8750 KB │
+% │      128 │    26 │   1024 │        15 │        19 │        44 │       1 │     9 │       7 │       698123 │  2856961 │    63 │       29405 │  249857 │ 173.1875 KB │
+% │      128 │    26 │   8192 │        15 │        19 │        44 │       1 │     8 │       8 │      1761048 │  7114753 │    25 │       32392 │  270337 │ 229.0000 KB │
+% │      128 │    26 │ 131072 │        15 │        19 │        44 │       1 │     9 │       8 │      7924716 │ 31776769 │    35 │      183554 │ 1492993 │ 270.8750 KB │
+% └──────────┴───────┴────────┴───────────┴───────────┴───────────┴─────────┴───────┴─────────┴──────────────┴──────────┴───────┴─────────────┴─────────┴─────────────┘
+
+\begin{table}\centering
+  \begin{tabular}{|c|c|r||c|c||c|c|r|r||c||r|r||c|}\hline
+
+    \multicolumn{3}{|c||}{Parameter Sets}  
+    & \multirow{2}{*}{$\alpha_w$}  
+    & \multirow{2}{*}{$\alpha_H$}   &  \multicolumn{4}{c||}{KOTS Param}  
+    & \multirow{2}{*}{$\eta$}       & \multicolumn{2}{c||}{HVC Param}  
+    &  $|\sigma|$\\\cline{1-3}\cline{6-9}\cline{11-12}
+    
+    $\lambda$      & $\tau$
+    & $\rho\quad$&   && $\phi$ 
+    & $\gamma$                      & $\beta_\sigma\quad$     
+    & $q'\quad$                     &        
+    & $\beta\quad$                  & $q\quad$ 
+    & (Kilobytes) \\\hline\hline
+
+
+    % &       &        &            &  &  \multicolumn{4}{c||}{HVC}  &  & \multicolumn{2}{c||}{KOTS}  & (Kilobytes) \\\hline\hline
+    &       &   1024 &         16 &        37 &         13 &       6 &        775,143 &  3,168,257 &    59 &       25,133 &   202,753 & 142 \\\cline{3-13}
+    &    21 &   8192 &         16 &        37 &         16 &       6 &      2,698,381 & 10,872,833 &    99 &      120,108 &   962,561 & 160 \\\cline{3-13}
+    &       & 131072 &         16 &        37 &         13 &       7 &      8,803,786 & 35,301,377 &   199 &      970,665 & 7,790,593 & 187 \\\cline{2-13}
+
+    &       &   1024 &         16 &        37 &         13 &       6 &        775,143 &  3,168,257 &    59 &       25,202 &   202,753 & 160 \\\cline{3-13}
+112 &    24 &   8192 &         16 &        37 &         16 &       6 &      2,698,381 & 10,872,833 &    99 &      120,438 &   964,609 & 180 \\\cline{3-13}
+    &       & 131072 &         16 &        37 &         13 &       7 &      8,803,786 & 35,301,377 &   199 &      973,331 & 7,790,593 & 211 \\\cline{2-13}
+
+    &       &   1024 &         16 &        37 &         13 &       6 &        775,143 &  3,168,257 &    59 &       25,243 &   202,753 & 172 \\\cline{3-13}
+    &    26 &   8192 &         16 &        37 &         16 &       6 &      2,698,381 & 10,872,833 &   101 &      123,098 &   995,329 & 194 \\\cline{3-13}
+    &       & 131072 &         16 &        37 &         13 &       7 &      8,803,786 & 35,301,377 &   199 &      974,934 & 7,806,977 & 227 \\\hline\hline
+
+    &       &   1024 &         19 &        44 &          9 &       7 &        698,123 &  2,856,961 &    63 &       29,276 &   249,857 & 144 \\\cline{3-13}
+    &    21 &   8192 &         19 &        44 &          8 &       8 &      1,761,048 &  7,114,753 &    25 &       32,252 &   270,337 & 189 \\\cline{3-13}
+    &       & 131072 &         19 &        44 &          9 &       8 &      7,924,716 & 31,776,769 &    35 &      182,757 & 1,492,993 & 224 \\\cline{2-13}
+
+    &       &   1024 &         19 &        44 &          9 &       7 &        698,123 &  2,856,961 &    63 &       29,357 &   249,857 & 162 \\\cline{3-13}
+128 &    24 &   8192 &         19 &        44 &          8 &       8 &      1,761,048 &  7,114,753 &    25 &       32,339 &   270,337 & 213 \\\cline{3-13}
+    &       & 131072 &         19 &        44 &          9 &       8 &      7,924,716 & 31,776,769 &    35 &      183,255 & 1,492,993 & 252 \\\cline{2-13}
+
+    &       &   1024 &         19 &        44 &          9 &       7 &        698,123 &  2,856,961 &    63 &       29,405 &   249,857 & 174 \\\cline{3-13}
+    &    26 &   8192 &         19 &        44 &          8 &       8 &      1,761,048 &  7,114,753 &    25 &       32,392 &   270,337 & 229 \\\cline{3-13}
+    &       & 131072 &         19 &        44 &          9 &       8 &      7,924,716 & 31,776,769 &    35 &      183,554 & 1,492,993 & 271 \\\hline
+  \end{tabular}
+  \caption{Parameter sets for Chipmunk}
+\end{table}
+
+
 We use a same approach to derive the security of the parameters as in Squirrel \cite{CCS:FleSimZha22}.
 We adopted the so-called ``realistic model'' in \cite{DBLP:conf/uss/AlkimDPS16}.
 For a BKZ of block size $\beta$, the cost in this model is estimated by
@@ -7,7 +77,8 @@ $2^{0.292\beta+16.4+\log(\#\texttt{SVP calls})}$.
 In the meantime, the LWE-estimator \cite{DBLP:journals/jmc/AlbrechtPS15}
 shows that for a root Hermite factor of $1.005$ we expect a block size of 286, which yields 112 bits security under the above model. 
 
-We require the ring-SIS problem in \ref{lem:hvcprobhom} and \ref{lem:kots_correct} are hard. We ran a script that enumerates all possible 
+We require the ring-SIS problem in Lemma \ref{lem:hvcprobhom} and \ref{lem:kots_correct} are hard. We ran a script \footnote{\url{TBD}}
+that enumerates all possible 
 parameters, in terms of the modulus of the rings, the arity of decomposition, etc., and finds the parameter sets that
 allows for smallest signature size.
 
@@ -18,7 +89,7 @@ The following table summarize the results from the script.
 % \end{table}
 \subsection{Comparisons}\label{ss:comparison}
 
-We compare the performance of Chipmunk against both the trivial solution, i.e., repeating Falcon signature \cite{} for $\rho$ times, and
+We compare the performance of Chipmunk against both the trivial solution, i.e., repeating Falcon signature for $\rho$ times, and
 Squirrel \cite{CCS:FleSimZha22}, the previous state-of-the-art. The data for Chipmunk and Squirrel are collected over a same benchmark platform: an AMD 5900x with 24 threads
 and 32 Gigabytes of memory. The data for Falcon-512 is collected from their official website\footnote{\url{https://falcon-sign.info/}}.
 
@@ -47,7 +118,7 @@ aggregated signature is reduced by 5 times.
                     &Batch Verification    
                                       & 294 ms      & 53  ms    &  47 ms    & 6.2$\times$ & 1.1$\times$ \\\cline{2-7}
                     &Agg. Sig. size   & 5.5 MB      & 762 KB    & 160 KB    & 340$\times$ & 4.8$\times$ \\\hline
-\end{tabular}\\
+  \end{tabular}\\
   $^{*}$: Trivial solution via repeating Falcon-512 signature for ``\# signers'' times.\\
   $^{**}$: Using parameters $\tau=21$.
   \caption{Comparisons among different solutions.}
@@ -66,13 +137,13 @@ Notice that this platform is different from that of Section \ref{ss:comparison}.
   \begin{tabular}{|c|c|c|c|c|c|c|c|c||c|c|c|}\hline
       Tree Height         & Key Generation            & Signing                   & $\#$ Signers  &  Aggregation & Verification  \\ \hline\hline
       \multirow{2}{*}{21} & \multirow{2}{*}{7.4 sec}  & \multirow{2}{*}{0.40 ms}  & 1024    &   491 ms     &  7.3 ms       \\\cline{4-6}
-                          &                           &                           & 8192    &   3.5 sec    &  42.3 ms       \\\hline\hline
+                          &                           &                           & 8192    &   3.5 sec    &  42.3 ms      \\\hline\hline
 
       \multirow{2}{*}{24} & \multirow{2}{*}{1 min}    & \multirow{2}{*}{0.44 ms}  & 1024    &   492 ms     &  7.5 ms       \\\cline{4-6}
-                          &                           &                           & 8192    &   3.8 sec    &  42.1 ms       \\\hline\hline
+                          &                           &                           & 8192    &   3.8 sec    &  42.1 ms      \\\hline\hline
 
       \multirow{2}{*}{26} & \multirow{2}{*}{  4 min}  & \multirow{2}{*}{0.44 ms}  & 1024    &   518 ms     &  7.1 ms       \\\cline{4-6}
-                          &                           &                           & 8192    &   4.0 sec    &  42.9 ms       \\\hline
+                          &                           &                           & 8192    &   4.0 sec    &  42.9 ms      \\\hline
 
   \end{tabular}\\
   \caption{Benchmark results}
