--- a/preamble-standard-krypto.tex
+++ b/preamble-standard-krypto.tex
@@ -92,3 +92,8 @@
 \interfootnotelinepenalty=10000 %splitting footnotes across pages is far worse than over/underfull pages
 
 \usepackage{hyperref} %must be LAST preamble command, or so they say.
+
+
+\makeatletter
+\newcommand\footnoteref[1]{\protected@xdef\@thefnmark{\ref{#1}}\@footnotemark}
+\makeatother
