--- a/sections/prelim.tex
+++ b/sections/prelim.tex
@@ -1,3 +1,6 @@
+% !TEX root = ../main.tex
+\section{Preliminaries}\label{sec:prelim}
+
 \[\zip(\vec{a},\vec{b}) := \begin{pmatrix}(a_1,b_1)\\
 \vdots\\
 (a_\ell,b_\ell) \end{pmatrix}\]
