started working on technical overview, committing to avoid conflicts

--- a/main.tex
+++ b/main.tex
@@ -55,7 +55,7 @@
 %% Load macros
 \input{commanddefs}
 
-\title{Le Chipmunk: Comme le Squirrel mais plus petite}
+\title{Chipmunk: Better Synchronized Multi-Signatures from Lattices}
 
 
 \author{
