--- a/sections/benchmarks.tex
+++ b/sections/benchmarks.tex
@@ -1,4 +1,4 @@
-\section{Parameters and Implementations}
+\section{Benchmarks}\label{sec:benchmarks}
 \subsection{Parameters and security estimations}
 
 % ┌──────────┬───────┬────────┬───────────┬───────────┬───────────┬─────────┬───────┬─────────┬──────────────┬──────────┬───────┬─────────────┬─────────┬─────────────┐
