--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -43,16 +43,34 @@ In a real-world distributed system, such an attack on liveness would be highly p
 We formally ensure that successfully verifying individual signatures will be successfully aggregated, even if they are chosen maliciously. 
 
 On the practical side, our scheme Chipmunk produces smaller individual and aggregated signatures, when compared to Squirrel.
-In terms of computational efficiency, Chipmunk either outperforms Squirrel or remains comparable in speed.
-Even for our smallest benchmarking parameters, using keys that can generate $2^{21}$ signature, i.e. allow for signing every 10 seconds for slightly over half a year, Chipmunk's individual and aggregate signatures are smaller by a factor of $1.4\times$ and $4.8\times$ respectively, when compared to Squirrel.
+In terms of computational efficiency metrics, Chipmunk either significantly outperforms Squirrel or remains comparable in speed.
+In terms of bandwidth, even for our smallest benchmarking parameters, using keys that can generate $2^{21}$ signature, i.e. allow for signing every 10 seconds for slightly over half a year, Chipmunk's individual and aggregate signatures are smaller by a factor of $1.4\times$ and $4.8\times$ respectively, when compared to Squirrel.
 An individual Chipmunk signatures is $32$ KB and aggregating $8192$ signatures results in an aggregate signature that is $160$ KB large.
 The gap between Chipmunk's and Squirrel's performance increases with an increasing bound on the number of signatures that should issuable with a single key.
+%One of Squirrel's main computational bottlenecks was key generation as generating keys that support $2^{21}$ and $2^{26}$ signatures took $4$ minutes and $2$ hours.
+%Chipmunk's key generation times are smaller for these parameters by factors of $9 \times$ and $30 \times$.
 
-One of Squirrel's main computational bottlenecks was key generation as generating keys that support $2^{21}$ and $2^{26}$ signatures took $4$ minutes and $2$ hours.
-Chipmunk's key generation times are smaller for these parameters by factors of $9 \times$ and $30 \times$.
-
+We have fully implemented Chipmunk and provide extensive benchmarks and comparisons to Squirrel in~\autoref{sec:benchmarks}.
+Chipmunk is the first concretely efficient multi-signature scheme that is on the verge of being practical enough for real-world deployment.
 
 \subsection{Technical Overview}
+
+Conceptually, Chipmunk closely follows the blueprint that was introduced by Fleischhacker, Simkin, and Zhang~\cite{CCS:FleSimZha22}.
+Recall that in their work and in ours we only aim to issue an a-priori bounded number of signatures, meaning that key generation gets an additional parameter $\tau$ and produces a public key that can be used to sign $2^\tau$ messages.
+Further recall that we are in the synchronized setting, meaning that we only aim to aggregate signatures for the same message that were issued at the same time step.
+
+Each signer's public key $\pk$ is a homomorphic vector commitment of length $2^\tau$, where position $i$ commits to $\pk^i$, which is the public key of a homomorphic one-time signature scheme.
+To sign message $m$ at time step $i$, the signer opens the commitment $\pk$ to $\pk^i$ at position $i$ and uses the corresponding one-time signing key to sign the message $m$.
+The signature is a vector itself that consists of $\pk_i$, the corresponding opening, and the signature of $m$ under this one-time key.
+Verification checks whether a given s
+Aggregation of independent signatures for the same message at the same time step exploits the homomorphic properties of the vector commitment and one-time signature scheme.
+Roughly speaking, 
+
+
+
+
+
+
 
 
 
