--- a/sections/benchmarks.tex
+++ b/sections/benchmarks.tex
@@ -31,7 +31,7 @@
     & \multirow{2}{*}{$\alpha_w$}  
     & \multirow{2}{*}{$\alpha_H$}   &  \multicolumn{4}{c||}{KOTS Param}  
     & \multirow{2}{*}{$\eta$}       & \multicolumn{2}{c||}{HVC Param}  
-    &  $|\sigma|$\\\cline{1-3}\cline{6-9}\cline{11-12}
+    &  {\bf Sig. Size}\\\cline{1-3}\cline{6-9}\cline{11-12}
     
     $\lambda$      & $\tau$
     & $\rho\quad$&   && $\phi$ 
